fix: entity id synchronization in waterfall by scoping to individual workers